--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Expense Tracker Home</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/Home.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
 </head>
 <body>
   <div class="container">
